# indico-mlz-agreements

./: pyproject.toml  setup.cfg  setup.py
indico_mlz_agreement/: __init__.py  agreements.py  blueprint.py  plugin.py
indico_mlz_agreement/templates/: agreement_form.html
