[metadata]
    name='indico-mlz-agreement'
    url='https://github.com/bpedersen2/mlz-indico-agreement'
    license='MIT'
    author='MLZ Indico Team'
    author_email='bjoern.pedersen@frm2.tum.de'
    classifiers= 
        Environment :: Plugins
        Environment :: Web Environment
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3.9
[options]
    packages=find:
    zip_safe=False
    include_package_data=True
    use_scm_version= 
         write_to = indico_mlz_agreement/version.py
         local_scheme = node-and-timestamp
    setup_requires =
           setuptools>=39
           setuptools_scm[toml]>=3.4
    install_requires = 
             indico>=3.1
[options.entry_points]
   indico.plugins= 
       mlzagreement = indico_mlz_agreement.plugin:MLZAgreementPlugin
